--- a/1-Ramp up/3-Colecciones/Ejercicios Colecciones.ipynb
+++ b/1-Ramp up/3-Colecciones/Ejercicios Colecciones.ipynb
@@ -21,10 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [1,2,3,4,5]\n",
+    "ejer_1.reverse()\n",
+    "print(ejer_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "for i in range(len(ejer_2)):\n",
+    "    ejer_2[i] = ejer_2[i]**2\n",
+    "\n",
+    "print(ejer_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +85,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hola Que', 'Hola tal', 'amigo Que', 'amigo tal']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3_1 = [\"Hola\", \"amigo\"]\n",
+    "ejer_3_2 = [\"Que\", \"tal\"]\n",
+    "\n",
+    "ejer_3_tot = []\n",
+    "\n",
+    "for i in ejer_3_1:\n",
+    "    for j in ejer_3_2:\n",
+    "\n",
+    "        ejer_3_tot.append(i + \" \" + j)\n",
+    "        \n",
+    "print(ejer_3_tot)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +121,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n",
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_4 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "print(ejer_4)\n",
+    "\n",
+    "indice = ejer_4.index(45)\n",
+    "ejer_4[indice] = 0\n",
+    "\n",
+    "print(ejer_4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +156,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "20\n",
+      "3\n",
+      "47\n",
+      "19\n",
+      "3\n",
+      "3\n",
+      "29\n",
+      "45\n",
+      "67\n",
+      "78\n",
+      "90\n",
+      "3\n",
+      "3\n",
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [3, 20, 3, 47, 19, 3, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "ejer_5_2 = ejer_5.copy()\n",
+    "\n",
+    "for i in ejer_5:\n",
+    "    print(i)\n",
+    "\n",
+    "    if i == 3:\n",
+    "        ejer_5_2.remove(3)\n",
+    "\n",
+    "    #print(ejer_5_2)\n",
+    "print(ejer_5_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,10 +211,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(4,)\n",
+      "<class 'tuple'>\n",
+      "('a', 5, True, 7.0)\n",
+      "a\n",
+      "7.0\n",
+      "('a', 5, True, 7.0, 8)\n",
+      "('a', 5, 7.0, 8)\n",
+      "['a', 5, True, 7.0, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6_1 = (1,2,3)\n",
+    "print(ejer_6_1)\n",
+    "\n",
+    "ejer_6_2 = (4,)\n",
+    "print(ejer_6_2)\n",
+    "print(type(ejer_6_2))\n",
+    "\n",
+    "ejer_6_3 = (\"a\", 5, True, 7.)\n",
+    "print(ejer_6_3)\n",
+    "\n",
+    "print(ejer_6_3[0])\n",
+    "print(ejer_6_3[len(ejer_6_3)-1])\n",
+    "\n",
+    "ejer_6_5 = (8,)\n",
+    "ejer_6_5_1 = ejer_6_3 + ejer_6_5\n",
+    "print(ejer_6_5_1)\n",
+    "\n",
+    "ejer_6_1 = ejer_6_5_1[0:2]\n",
+    "ejer_6_2 = ejer_6_5_1[3:5]\n",
+    "print(ejer_6_1 + ejer_6_2)\n",
+    "\n",
+    "print(list(ejer_6_5_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apartado 1\n",
+      "('Buenos', 'días', 'Antonio')\n",
+      "Apartado 2\n",
+      "('Adios',)\n",
+      "<class 'tuple'>\n",
+      "Apartado 3\n",
+      "('Hola', 2, 5.93, True)\n",
+      "Apartado 4\n",
+      "4\n",
+      "Hola True\n",
+      "Apartado 5\n",
+      "('Hola', 2, 5.93, True, False)\n",
+      "Apartado 6\n",
+      "('Hola', 2, True, False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apartado 1\n",
+    "print('Apartado 1')\n",
+    "tupla_1 = ('Buenos', 'días', 'Antonio')\n",
+    "print(tupla_1)\n",
+    "# apartado 2\n",
+    "print('Apartado 2')\n",
+    "tupla_2 = ('Adios', )\n",
+    "print(tupla_2)\n",
+    "print(type(tupla_2))\n",
+    "# apartado 3\n",
+    "print('Apartado 3')\n",
+    "tupla_remix = ('Hola', 2, 5.93, True)\n",
+    "print(tupla_remix)\n",
+    "# apartado 4\n",
+    "print('Apartado 4')\n",
+    "x=len(tupla_remix)\n",
+    "print(x)\n",
+    "print(tupla_remix[0], tupla_remix[x-1])\n",
+    "# apartado 5\n",
+    "print('Apartado 5')\n",
+    "tupla_remix_new = (False, )\n",
+    "tupla_final= tupla_remix + tupla_remix_new\n",
+    "print(tupla_final)\n",
+    "# apartado 6\n",
+    "print('Apartado 6')\n",
+    "x=len(tupla_final)\n",
+    "mitad_tupla = tupla_final[0:int(x/2)] + tupla_final[int(x/2)+1:x]\n",
+    "print(mitad_tupla)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,10 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cien cañones por banda\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_7 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "print(\" \".join(ejer_7))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +352,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_8 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "\n",
+    "print(ejer_8[2])\n",
+    "print(ejer_8[-3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,10 +384,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "(19, 3, 29, 45, 67, 78)\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(ejer_9.count(3))\n",
+    "\n",
+    "ejer_9_2 = ejer_9[4:10]\n",
+    "print(ejer_9_2)\n",
+    "\n",
+    "print(len(ejer_9))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,10 +417,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "60 in ejer_9\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,10 +447,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n",
+      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_11 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "\n",
+    "# convertir a lista\n",
+    "print(list(ejer_11))\n",
+    "\n",
+    "# convertir a set\n",
+    "print(set(ejer_11))\n",
+    "\n",
+    "ejer_11_dict = {}\n",
+    "# convertir a diccionario\n",
+    "for i,j in enumerate(ejer_11):\n",
+    "    ejer_11_dict[i] = j\n",
+    "\n",
+    "print(ejer_11_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,10 +490,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 3, 'y': 2, 'z': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_12 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "ejer_12_dic = {}\n",
+    "\n",
+    "for i,j in ejer_12:\n",
+    "    ejer_12_dic[i] = j\n",
+    "\n",
+    "print(ejer_12_dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': 3, 'y': 2, 'z': 1}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(ejer_12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_12_dic[\"x\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,10 +566,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 8]\n",
+      "[234, 98, 78, 29]\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 9: 65}\n",
+      "True\n",
+      "Clave: 4, Valor -> 78\n",
+      "Clave: 2, Valor -> 98\n",
+      "Clave: 8, Valor -> 234\n",
+      "Clave: 5, Valor -> 29\n",
+      "Clave: 9, Valor -> 65\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_13 = {4:78, 2:98, 8:234, 5:29}\n",
+    "\n",
+    "# lista de claves ordenadas ascendentemente\n",
+    "list_1 = sorted(list(ejer_13.keys()))\n",
+    "\n",
+    "# lista de valores ordenados descendentemente\n",
+    "list_2 = sorted(list(ejer_13.values()), reverse = True)\n",
+    "print(list_1)\n",
+    "print(list_2)\n",
+    "\n",
+    "# añadir elemento\n",
+    "ejer_13[9] = 65\n",
+    "print(ejer_13)\n",
+    "\n",
+    "print(2 in ejer_13)\n",
+    "\n",
+    "for clave, valor in ejer_13.items():\n",
+    "    print(f\"Clave: {clave}, Valor -> {valor}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,10 +619,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_14_1 = {1: 11, 2: 22}\n",
+    "ejer_14_2 = {3: 33, 4: 44}\n",
+    "\n",
+    "ejer_14_1.update(ejer_14_2)\n",
+    "print(ejer_14_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,10 +649,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_15 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "print(sum(ejer_15.values()))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,10 +676,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_16 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "\n",
+    "prod = 1\n",
+    "for i in ejer_16.values():\n",
+    "    prod = prod * i\n",
+    "\n",
+    "print(prod)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,10 +710,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 2, 5}\n",
+      "{8, 2, 5, 6}\n",
+      "{8, 2, 5}\n",
+      "{8, 2, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# crear set\n",
+    "ejer_17 = {5,8,2}\n",
+    "print(ejer_17)\n",
+    "\n",
+    "#  añadir elemento\n",
+    "ejer_17.add(6)\n",
+    "print(ejer_17)\n",
+    "\n",
+    "# elimina el ultimo elemento\n",
+    "ejer_17.remove(6)\n",
+    "print(ejer_17)\n",
+    "\n",
+    "# eliminar el elemento 10, con el discard no salta error\n",
+    "ejer_17.discard(10)\n",
+    "print(ejer_17)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -326,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
