--- a/1-Ramp up/4-Funciones/Ejercicios funciones.ipynb
+++ b/1-Ramp up/4-Funciones/Ejercicios funciones.ipynb
@@ -18,10 +18,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lunes\n",
+      "Domingo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dia_semana(dia_num):\n",
+    "    if dia_num == 1:\n",
+    "        return \"Lunes\"\n",
+    "    elif dia_num == 2:\n",
+    "        return \"Martes\"\n",
+    "    elif dia_num == 3:\n",
+    "        return \"Miércoles\"\n",
+    "    elif dia_num == 4:\n",
+    "        return \"Jueves\"\n",
+    "    elif dia_num == 5:\n",
+    "        return \"Viernes\"\n",
+    "    elif dia_num == 6:\n",
+    "        return \"Sábado\"\n",
+    "    elif dia_num == 7:\n",
+    "        return \"Domingo\"\n",
+    "    else:\n",
+    "        return \"No es un dia de la semana\"\n",
+    "\n",
+    "print(dia_semana(1))\n",
+    "\n",
+    "print(dia_semana(7))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def day_of_week():\n",
+    "    \n",
+    "    day_num = int(input(\"Introduzca un número de día de la semana\"))\n",
+    "    if day_num == 1:\n",
+    "        day = \"Lunes\"\n",
+    "    elif day_num == 2:\n",
+    "        day = \"Martes\"\n",
+    "    elif day_num == 3:\n",
+    "        day = \"Miercoles\"\n",
+    "    elif day_num == 4:\n",
+    "        day = \"Jueves\"\n",
+    "    elif day_num == 5:\n",
+    "        day = \"Viernes\"\n",
+    "    elif day_num == 6:\n",
+    "        day = \"Sabado\"\n",
+    "    elif day_num == 7:\n",
+    "        day = \"Domingo\"\n",
+    "    else:\n",
+    "        print(\"Erro al introducir el número, vuelva a intentarlo\")\n",
+    "    \n",
+    "    \n",
+    "day_of_week()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El día no existe\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dias_semana2 (dias):\n",
+    "    semana =['Lunes', 'Martes', 'Miércoles', 'Jueves','Viernes','Sábado','Domingo']\n",
+    "    if dias > 7 or dias < 1:\n",
+    "        nombre_dia = 'El día no existe'\n",
+    "    else:\n",
+    "        nombre_dia = semana[dias-1]\n",
+    "    return nombre_dia\n",
+    "print(dias_semana2(0))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,10 +119,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1 2 3 4\n",
+      " 1 2 3\n",
+      " 1 2\n",
+      " 1\n",
+      " 1 2 3 4 5 6\n",
+      " 1 2 3 4 5\n",
+      " 1 2 3 4\n",
+      " 1 2 3\n",
+      " 1 2\n",
+      " 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# x ---> funcion() --> y\n",
+    "\n",
+    "def piramide(filas): # parametros de entrada es lo que esta entre los parentesis\n",
+    "    for i in range(filas):\n",
+    "\n",
+    "        return \n",
+    "\n",
+    "        out = \"\"\n",
+    "        for j in range(filas-i):\n",
+    "            out = out + \" \" + str(j+1)\n",
+    "        print(out)\n",
+    "\n",
+    "    # return None   # parametros de salida es lo que esta en el return\n",
+    "\n",
+    "piramide(4)\n",
+    "piramide(6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mas_facil_no_se_puede():\n",
+    "    print()\n",
+    "    # return None\n",
+    "\n",
+    "valor_devuelto = mas_facil_no_se_puede()\n",
+    "print(valor_devuelto)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
