--- a/1-Ramp up/4-Funciones/Ejercicios funciones.ipynb
+++ b/1-Ramp up/4-Funciones/Ejercicios funciones.ipynb
@@ -146,8 +146,6 @@
     "def piramide(filas): # parametros de entrada es lo que esta entre los parentesis\n",
     "    for i in range(filas):\n",
     "\n",
-    "        return \n",
-    "\n",
     "        out = \"\"\n",
     "        for j in range(filas-i):\n",
     "            out = out + \" \" + str(j+1)\n",
@@ -192,10 +190,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 es mayor que 3\n",
+      "Son iguales\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compare_fun(num_1, num_2):\n",
+    "    if num_1 == num_2:\n",
+    "        return \"Son iguales\"\n",
+    "    elif num_1 > num_2:\n",
+    "        return str(num_1) + \" es mayor que \" + str(num_2)\n",
+    "    else:\n",
+    "        return str(num_2) + \" es mayor que \" + str(num_1)\n",
+    "\n",
+    "print(compare_fun(3,4))\n",
+    "print(compare_fun(4,4))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,10 +225,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def letter_count(texto, letra):\n",
+    "    texto = texto.lower()\n",
+    "    return texto.count(letra.lower())\n",
+    "\n",
+    "letter_count(\"En esta clase aprenderemos mucho Python\", \"C\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,10 +258,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'e': 5,\n",
+       " 'n': 3,\n",
+       " ' ': 5,\n",
+       " 's': 3,\n",
+       " 't': 2,\n",
+       " 'a': 3,\n",
+       " 'c': 2,\n",
+       " 'l': 1,\n",
+       " 'p': 2,\n",
+       " 'r': 1,\n",
+       " 'd': 1,\n",
+       " 'm': 2,\n",
+       " 'o': 3,\n",
+       " 'u': 1,\n",
+       " 'h': 2,\n",
+       " 'y': 1}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def letter_count_dic(texto):\n",
+    "\n",
+    "    all_letters = {}\n",
+    "\n",
+    "    for i in texto.lower():\n",
+    "        \n",
+    "        if i in all_letters:\n",
+    "            all_letters[i] = all_letters[i] + 1\n",
+    "\n",
+    "        else:\n",
+    "            all_letters[i] = 1\n",
+    "\n",
+    "    return all_letters\n",
+    "\n",
+    "letter_count_dic(\"En esta clase aprendemos mucho Python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'h': 2, 'o': 2, 'l': 2, 'a': 2}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "texto_sin_espacios = mi_texto.replace(\" \", \"\")\n",
+    "texto_sin_comas = texto_sin_espacios.replace(\",\", \"\")\n",
+    "texto_minusculas = texto_sin_comas.lower()\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "def diccionario_letras(i):\n",
+    "\n",
+    "    diccionario={}\n",
+    "    \n",
+    "    x = i.replace(' ','').lower() # texto_nuevo = mi_texto.replace(\" \", \"\").replace(\",\", \"\").lower()\n",
+    "    for n in x:\n",
+    "        diccionario[n]=x.count(n)\n",
+    "    return diccionario\n",
+    "    \n",
+    "diccionario_letras('Hola hola')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,10 +355,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 9]\n",
+      "Añadido el 9999 porque no se introdujo valor en el argumento elemento\n",
+      "[1, 2, 3, 9999]\n",
+      "[1, 3]\n",
+      "No ha introducido el elemento\n",
+      "[1, 2, 3]\n",
+      "El elemento 10 no existe en la lista\n",
+      "[1, 2, 3]\n",
+      "error\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def listas_program(lista, comando, elemento = None):\n",
+    "\n",
+    "    if comando == \"add\" and elemento != None:\n",
+    "        lista.append(elemento)\n",
+    "\n",
+    "    elif comando == \"add\" and elemento == None:\n",
+    "        lista.append(9999)\n",
+    "        print(\"Añadido el\", 9999, \"porque no se introdujo valor en el argumento elemento\")\n",
+    "\n",
+    "    elif comando == \"remove\" and elemento != None:\n",
+    "        try:\n",
+    "            lista.remove(elemento)\n",
+    "        except:\n",
+    "            print(\"El elemento\", elemento, \"no existe en la lista\")\n",
+    "\n",
+    "    elif comando == \"remove\" and elemento == None:\n",
+    "        print(\"No ha introducido el elemento\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"error\")\n",
+    "\n",
+    "    return lista\n",
+    "\n",
+    "print(listas_program([1,2,3], \"add\", 9))\n",
+    "print(listas_program([1,2,3], \"add\"))\n",
+    "print(listas_program([1,2,3], \"remove\", 2))\n",
+    "print(listas_program([1,2,3], \"remove\"))\n",
+    "print(listas_program([1,2,3], \"remove\", 10))\n",
+    "print(listas_program([1,2,3], \"addd\", 10))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,10 +417,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hola me llamo Alberto'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def junta_palabras(*args):\n",
+    "    return \" \".join(args)\n",
+    "\n",
+    "junta_palabras(\"Hola\", \"me\", \"llamo\", \"Alberto\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,7 +458,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fibo(0) = 0\n",
+    "# fibo(1) = 1\n",
+    "##########\n",
+    "# fibo(2) = 1  fibo(1) +  fibo(0)\n",
+    "# fibo(3) = 2\n",
+    "# fibo(4) = \n",
+    "\n",
+    "# fibo(14) = fibo(13) + fibo(12)\n",
+    "\n",
+    "# 0, 1,       1, 2, 3, 5, 8, 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci(n-1) + fibonacci(n-2)\n",
+    "\n",
+    "print(fibonacci(1))\n",
+    "print(fibonacci(2))\n",
+    "print(fibonacci(4))\n",
+    "print(fibonacci(5))\n",
+    "print(fibonacci(8))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,10 +521,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cuadrado(lado):\n",
+    "    return lado * lado\n",
+    "\n",
+    "def triangulo (base, altura):\n",
+    "    return (base * altura)/2\n",
+    "\n",
+    "def circulo(radio):\n",
+    "    import math\n",
+    "    return math.pi * radio**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "638.8185307179587\n",
+      "396.46015351590177\n"
+     ]
+    }
+   ],
+   "source": [
+    "circ1 = 2 * circulo(10)\n",
+    "tria1 = triangulo(3,7)\n",
+    "print(circ1 + tria1)\n",
+    "\n",
+    "cuadr2 = cuadrado(10)\n",
+    "circ2 = circulo(4) + 2 * circulo(6)\n",
+    "trian2 = 5 * triangulo(2,4)\n",
+    "print(cuadr2 + circ2 + trian2)"
+   ]
   }
  ],
  "metadata": {
